fix dark mode styling

--- a/src/components/screens/Info/Info.module.scss
+++ b/src/components/screens/Info/Info.module.scss
@@ -1,19 +1,15 @@
 .info {
-  @apply h-full flex flex-col items-center justify-center font-bold text-center;
+  @apply h-full flex flex-col items-center justify-center font-bold text-center gap-4 sm:gap-8;
 
-  > .back {
-    @apply absolute top-6 left-6 text-4xl fill-hover;
-  }
-
-  > .about {
-    @apply text-xl  sm:max-w-xl sm:text-3xl md:max-w-2xl md:text-4xl md:leading-tight xl:max-w-3xl;
+  .about {
+    @apply text-2xl sm:max-w-xl sm:text-3xl md:max-w-2xl md:text-5xl md:leading-tight xl:max-w-3xl;
   }
 
   > .creator {
-    @apply mt-10 text-xl sm:text-2xl md:text-3xl text-gray-500 border-t-2 border-gray-500 pt-7;
+    @apply text-lg sm:text-xl md:text-3xl text-gray-500 border-t-2 border-gray-500 pt-4 sm:pt-7;
 
-    > a {
-      @apply ml-2 cursor-pointer hover:text-gray-300 transition-colors whitespace-nowrap;
+    > .link {
+      @apply ml-2 cursor-pointer  transition-colors whitespace-nowrap;
       > svg {
         @apply inline mb-1;
       }
