--- a/src/components/screens/Questions/Questions.module.scss
+++ b/src/components/screens/Questions/Questions.module.scss
@@ -1,23 +1,19 @@
 .questions {
-  @apply h-full flex flex-col justify-between items-center;
-
-  > .back {
-    @apply absolute top-6 left-6 text-4xl fill-hover;
-  }
+  @apply h-full flex flex-col justify-between items-center py-12;
 
   > .counter {
-    @apply font-bold ml-4 mt-8 self-center md:text-xl;
+    @apply font-bold ml-4 -mt-2 md:text-xl;
   }
 
   > h2 {
-    @apply px-2 w-full leading-9 sm:max-w-xl sm:text-4xl md:max-w-2xl md:text-5xl md:leading-tight xl:max-w-3xl;
+    @apply text-2xl px-2 w-full leading-9 sm:max-w-xl sm:text-4xl md:max-w-2xl md:text-5xl md:leading-tight xl:max-w-3xl;
   }
 
-  > .buttons {
-    @apply flex w-full mb-8 gap-4 justify-between sm:justify-center sm:gap-20;
+  > .buttonsWrapper {
+    @apply flex w-full gap-4 justify-between sm:justify-center sm:gap-28;
 
-    > button {
-      @apply btn text-5xl rounded-full p-6;
+    > .button {
+      @apply text-5xl rounded-full p-6;
     }
   }
 }
