--- a/src/components/screens/Start/Start.module.scss
+++ b/src/components/screens/Start/Start.module.scss
@@ -1,10 +1,6 @@
 .start {
   @apply h-full flex flex-col items-center justify-between sm:justify-center sm:gap-16 py-12;
 
-  > .infoIcon {
-    @apply absolute top-6 left-6 text-4xl fill-hover;
-  }
-
   > .toggle {
     @apply absolute top-6 right-6;
   }
@@ -13,8 +9,8 @@
     @apply text-5xl leading-[1.1] sm:text-7xl sm:leading-tight;
   }
 
-  > button {
-    @apply btn text-5xl rounded-full p-6 sm:px-12;
+  > .startBtn {
+    @apply text-5xl rounded-full p-6 sm:px-12;
 
     > svg {
       @apply pl-1;
